# smart

./: .gitignore  README.rst  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  deployment.yml
docs/: Makefile
docs/source/: 404.rst  CNAME  conf.py  index.rst
docs/source/_static/extra/: epilog.rst
docs/source/assets/html/: contributed.html
docs/source/course-codex/: index.rst  intro-to-programming.rst
docs/source/explained/docker/: first-container.rst  index.rst
docs/source/explained/eli5/: index.rst
docs/source/learning-out-loud/: index.rst
docs/source/learning-out-loud/ml-explained/: index.rst  ml101.rst
docs/source/miscellany/: course-codex.rst  faq.rst  guiding-stars.rst  youtube-videos.rst
docs/source/projects/: slowtorch.rst  xsnumpy.rst
scripts/: __init__.py
theme/: __init__.py  business-analytics-page.txt
theme/base/: author.html.jinja  breadcrumbs.html.jinja  feedback.html.jinja  footer.html.jinja  genindex.html  header.html.jinja  layout.html  page.html  picture.html.jinja  previous_next_pages.html.jinja  repository.html.jinja  scrolltop.html.jinja  search.html  searchbox.html.jinja  sidebar.html.jinja  sidebar_main_nav_links.html.jinja  sidebar_toc.html.jinja  sidebar_urls.html.jinja  theme.toml  thumbnail.html.jinja  toc.html.jinja  video.html.jinja  youtube.html.jinja
theme/base/static/: base.css  code.css  doc-search.css  geist.css  github.css  smart.css  smart.js  sphinx-design.css  theme.css  theme.js
theme/base/templates/: author.html.jinja  breadcrumbs.html.jinja  feedback.html.jinja  footer.html.jinja  genindex.html  header.html.jinja  layout.html  left_sidebar.html.jinja  page.html  picture.html.jinja  previous_next_pages.html.jinja  repository.html.jinja  right_sidebar.html.jinja  scrolltop.html.jinja  search.html  searchbox.html.jinja  theme.toml  thumbnail.html.jinja  video.html.jinja  youtube.html.jinja
theme/extensions/: __init__.py  author.py  picture.py  repository.py  roles.py  thumbnail.py  utils.py  video.py  youtube.py
theme/internal/: __init__.py  author.py  picture.py  repository.py  roles.py  summarise.py  tagged.py  thumbnail.py  utils.py  video.py  youtube.py
