[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "smart"
dynamic = [ "dependencies", "version" ]
authors = [
    { name = "Akshay Mestry", email = "xa@mes3.dev" }
]
description = "Studying, Mentorship, And Resourceful Teaching"
readme = "README.rst"
requires-python = ">=3.13"
keywords = [ "smart", "education", "learning", "sphinx", "python" ]
license.file = "LICENSE"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]

[project.urls]
homepage = "https://github.com/xames3/smart/"
documentation = "https://github.com/xames3/smart/"
repository = "https://github.com/xames3/smart"
issues = "https://github.com/xames3/smart/issues"

[project.entry-points."sphinx.html_themes"]
smart = "theme"

[tool.setuptools]
packages = ["theme"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "theme.version" }

[tool.black]
line-length = 80

[tool.djlint]
indent = 2

[tool.isort]
profile = "black"
line_length = 80
force_single_line = true
force_sort_within_sections = false

[tool.mypy]
files = [ "docs/*.py", "scripts/*.py", "theme/*.py"  ]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = [ "index", "union-attr", "attr-defined", "no-redef" ]

[[tool.mypy.overrides]]
module = [  ]
disable_error_code = [  ]

[tool.tox]
requires = [ "tox>=4" ]
envlist = [ "py313" ]

[tool.tox.env_run_base]
description = "Linting code and running static type checking on {base_python}"
deps = [
    "black",
    "djlint",
    "docutils-stubs",
    "flake8",
    "isort",
    "mypy",
    "mypy-extensions",
    "types-beautifulsoup4",
    "types-docutils",
    "typing_extensions",
]
commands = [
    [ "black", "-q", {replace = "posargs", default = [ "docs/", "scripts/", "theme/" ], extend = true }, "--line-length", "79" ],
    [ "isort", "--sl", { replace = "posargs", default = [ "docs/", "scripts/", "theme/" ], extend = true } ],
    [ "mypy", { replace = "posargs", default = [ "docs/", "scripts/", "theme/" ], extend = true } ],
    [ "flake8", { replace = "posargs", default = [ "docs/", "scripts/", "theme/" ], extend = true } ],
    [ "djlint", { replace = "posargs", default = [ "theme/base/" ], extend = true }, "--profile=jinja", "--reformat" ],
]

[tool.tox.gh.python]
"3.13" = ["3.13", "type", "pkg_meta"]
